# cdvae

./: .env  .env.example  .gitignore  CLAUDE.md  competition.ipynb  package-lock.json  pyproject.toml
cdvae/: run.py
cdvae/pl_data/: datamodule.py
cdvae/pl_modules/: gnn.py  model.py
conf/: default.yaml
conf/competition/: default.yaml
conf/data/: carbon.yaml  mp_20.yaml  perov.yaml
conf/logging/: default.yaml
conf/model/: vae.yaml
conf/optim/: default.yaml
conf/train/: default.yaml  multi_gpu.yaml  single_gpu.yaml
docs/: 设计说明.md
docs/比赛用例/: baseline.ipynb  从结构正向模拟谱.ipynb
docs/比赛用例/data/A/: composition.json
docs/比赛用例/data/A/pattern/: A-1.xy  A-10.xy  A-100.xy  A-1000.xy  A-1001.xy  A-1002.xy  A-1003.xy  A-1004.xy  A-1005.xy  A-1006.xy  A-1007.xy  A-1008.xy  A-1009.xy  A-101.xy  A-1010.xy  A-1011.xy  A-1012.xy  A-1013.xy  A-1014.xy  A-1015.xy  A-1016.xy  A-1017.xy  A-1018.xy  A-1019.xy  A-102.xy  A-1020.xy  A-1021.xy  A-1022.xy  A-1023.xy  A-1024.xy  A-1025.xy  A-1026.xy  A-1027.xy  A-1028.xy  A-1029.xy  A-103.xy  A-1030.xy  A-1031.xy  A-1032.xy  A-1033.xy  (+1960 more)
docs/比赛用例/data/C/: C.csv  composition.json
docs/比赛用例/data/C/pattern/: C-1.xy
outputs/mp20epochs100/08-06-18-09-53/.hydra/: hydra.yaml  overrides.yaml
outputs/mp20epochs100/08-06-18-09-53/outputs/mp20epochs100/08-06-18-09-53/: hparams.yaml  lattice_scaler.pt  prop_scaler.pt
outputs/mp20epochs100/08-06-18-09-53/wandb/: latest-run
outputs/mp20epochs100/08-06-18-09-53/wandb/offline-run-20250806_181118-xfjwqst9/files/: requirements.txt
outputs/mp20epochs100/08-06-18-09-53/wandb/offline-run-20250806_181118-xfjwqst9/files/media/graph/: graph_0_summary_e679a22c93278eb5b820.graph.json
scripts/: competition_evaluate.py  eval_utils.py
scripts/competition/: __init__.py  baseline_models.py  data.py  data_utils.py  generate_submission.py
